# BullyAlgo

./: CMakeLists.txt  Communicator.cpp  Communicator.hpp  Message.cpp  Message.hpp  Printer.cpp  Printer.hpp  Process.cpp  Process.hpp  Protocol.cpp  Protocol.hpp  Queue.cpp  Queue.hpp  README.mb  Timer.cpp  Timer.hpp  bully.cpp
